23Nov06=======================================================================
1. added wrapping to over length lines in console.pl.
03Nov06=======================================================================
1. add CTY-1609 changes
2. add back Geo::Taf code with submitted mods
3. add new version of the sh/425 code using the new database location.
09Oct06=======================================================================
1. fix problems with bad filters pointed by Thomas DL3SBB.
27Jul06=======================================================================
1. merge in official issue version of wpxloc.raw (with one change: 4U1V).
26Jul06=======================================================================
1. incorporated Jim AD1C's spiffy new, unified, wpxloc.raw and version 
1605 of cty.dat.
21Jul06=======================================================================
1. Added the (now) all new gtkconsole program, with all the changes needed in
dxspider to run it (yet another cmd interface (sigh)). You will need gtk2-perl
installed (most modern linux distros do this automatically). The big news is
that this will work on Windows boxes as well if you install the Gtk libraries
as per: http://gtk2-perl.sf.net.
03Jun06=======================================================================
1. Added changes to wpxloc.raw (prefixes) suggested by Jim AD1C. 
2. Made a change to prevent xml data being interpreted unless we are
configured for it.
3. Change the buddy messages after a suggestion from Angel EA7WA.
02Apr06=======================================================================
1. incorporated cty-1604 data.
29Mar06=======================================================================
1. fix sh/muf that I broke in the previous change
26Mar06=======================================================================
1. Arrange for any online buddies to be displayed when a user logs on.