@@ -1,3 +1,5 @@
+05Jan06=======================================================================
+1. increase default ephemeral deduping on PC15 to 6 minutes (from 2).
 23Nov06=======================================================================
 1. added wrapping to over length lines in console.pl.
 03Nov06=======================================================================
